--- a/navigators/index.html
+++ b/navigators/index.html
@@ -1,12 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>navigators</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>navigators</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    hello
+    <header>
+      <div class="container">
+        <nav>
+          <h1 class="brand"><a href="index.html">Car<span>l</span>in</a></h1>
+          <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">resume</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
