--- a/animations/1/index.html
+++ b/animations/1/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="box"></div>
+    <div class="trigger">
+      <div class="box"></div>
+    </div>
   </body>
 </html>
