--- a/animations/site/index.html
+++ b/animations/site/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <h1>CSS Transition</h1>
     <div class="trigger">
       <div class="box"></div>
     </div>
